最終課題(ipynbファイル)

--- a/dspro_2_final.ipynb
+++ b/dspro_2_final.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#変数urlにURLを格納する\n",
+    "#変数urlにURLを格納する。\n",
     "url = 'https://db.netkeiba.com/race/202306050811/'\n",
     "\n",
     "response = requests.get(url)\n",
